--- a/todomvc/Gemfile
+++ b/todomvc/Gemfile
@@ -28,6 +28,8 @@ gem 'spring',        group: :development
 
 gem 'bundler', '1.16.0.pre.2'
 
+gem 'minitest-reporters'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
