tests for api controller

--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -9,3 +9,8 @@ one: {}
 #
 two: {}
 #  column: value
+
+# todo:
+#   id: 1
+#   status: Task.availableStatuses[:active]
+#   description: 'active todo'
