add some fixtures

--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -10,7 +10,7 @@ one: {}
 two: {}
 #  column: value
 
-# todo:
-#   id: 1
-#   status: Task.availableStatuses[:active]
-#   description: 'active todo'
+valid_todo:
+  id: 1
+  status: Task.availableStatuses[:active]
+  description: 'active todo'
